updated auth0 setup

--- a/src/auth0/auth_config.json
+++ b/src/auth0/auth_config.json
@@ -1,4 +1,4 @@
 {
-    "domain": "dev-rkk793px.auth0.com",
-    "clientId": "I9vizHcqbIhWO6ozCjj6LsF3D6FnJEBx"
+    "domain": "ajeshkumar.eu.auth0.com",
+    "clientID": "Xcmx1whIj6t4qEUvzYkoXz1Icq3hHD3B"
   }
