Configure all URLs to redirect to index.html

--- a/firebase.json
+++ b/firebase.json
@@ -2,10 +2,12 @@
   "hosting": {
     "site": "deduce",
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
